--- a/depot/Gemfile
+++ b/depot/Gemfile
@@ -5,6 +5,8 @@ ruby '2.6.1'
 
 gem 'figaro'
 
+gem 'bcrypt', '~> 3.1.7'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.4'
 # Use sqlite3 as the database for Active Record
