--- a/depot/Gemfile
+++ b/depot/Gemfile
@@ -7,6 +7,8 @@ gem 'figaro'
 
 gem 'bcrypt', '~> 3.1.7'
 
+gem 'i18n-js'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.4'
 # Use sqlite3 as the database for Active Record
